--- a/COVID-19PredictionProject.ipynb
+++ b/COVID-19PredictionProject.ipynb
@@ -5109,29 +5109,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in data.matrix(x):\n",
-      "\"NAs introduced by coercion\"Warning message in data.matrix(x):\n",
-      "\"NAs introduced by coercion\"Warning message in data.matrix(x):\n",
-      "\"NAs introduced by coercion\"Warning message in data.matrix(x):\n",
-      "\"NAs introduced by coercion\""
-     ]
-    },
-    {
      "ename": "ERROR",
-     "evalue": "Error in randomForest.default(x, y, mtry = mtryStart, ntree = ntreeTry, : NA/NaN/Inf in foreign function call (arg 1)\n",
+     "evalue": "Error in parse(text = x, srcfile = src): <text>:6:0: unexpected end of input\n4: set.seed(1)\n5: res <- tuneRF(x = subset(covid_trainUK, y = covid_trainUK$Cumulative_deaths, ntreeTry = 500)\n  ^\n",
      "output_type": "error",
      "traceback": [
-      "Error in randomForest.default(x, y, mtry = mtryStart, ntree = ntreeTry, : NA/NaN/Inf in foreign function call (arg 1)\nTraceback:\n",
-      "1. tuneRF(x = subset(covid_trainUK, select = -Cumulative_deaths), \n .     y = covid_trainUK$Cumulative_deaths, ntreeTry = 500)",
-      "2. randomForest(x, y, mtry = mtryStart, ntree = ntreeTry, keep.forest = FALSE, \n .     ...)",
-      "3. randomForest.default(x, y, mtry = mtryStart, ntree = ntreeTry, \n .     keep.forest = FALSE, ...)"
+      "Error in parse(text = x, srcfile = src): <text>:6:0: unexpected end of input\n4: set.seed(1)\n5: res <- tuneRF(x = subset(covid_trainUK, y = covid_trainUK$Cumulative_deaths, ntreeTry = 500)\n  ^\nTraceback:\n"
      ]
     }
    ],
@@ -5140,7 +5126,7 @@
     "\n",
     "#Execute the tuning process\n",
     "set.seed(1)\n",
-    "res <- tuneRF(x = subset(covid_trainUK, select = -Cumulative_deaths), y = covid_trainUK$Cumulative_deaths, ntreeTry = 500)"
+    "res <- tuneRF(x = subset(covid_trainUK, y = covid_trainUK$Cumulative_deaths, ntreeTry = 500)"
    ]
   },
   {
