--- a/COVID-19PredictionProject.ipynb
+++ b/COVID-19PredictionProject.ipynb
@@ -5843,12 +5843,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Graph above shows a near perfect fit between the model predictions and the Cumulative deaths within the test datasets"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 357,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TIME SERIES ANALYSIS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error: Objects of type tbl_df/tbl/data.frame not supported by autoplot.\n",
+     "output_type": "error",
+     "traceback": [
+      "Error: Objects of type tbl_df/tbl/data.frame not supported by autoplot.\nTraceback:\n",
+      "1. autoplot(WHO_COVID19_UK[, c(\"Cumulative_cases\", \"Cumulative_deaths\")], \n .     facets = TRUE)",
+      "2. autoplot.default(WHO_COVID19_UK[, c(\"Cumulative_cases\", \"Cumulative_deaths\")], \n .     facets = TRUE)",
+      "3. stop(\"Objects of type \", paste(class(object), collapse = \"/\"), \n .     \" not supported by autoplot.\", call. = FALSE)"
+     ]
+    }
+   ],
+   "source": [
+    "#Produce time plots of only cumulative cases vs cumulative deaths\n",
+    "\n",
+    "autoplot(WHO_COVID19_UK[, c(\"Cumulative_cases\", \"Cumulative_deaths\")], facets = TRUE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
