Update to COVID project
Additional Data Visualisation graph added

--- a/Time Series Analysis and Forecasting.ipynb
+++ b/Time Series Analysis and Forecasting.ipynb
@@ -1056,7 +1056,7 @@
     }
    ],
    "source": [
-    "#Simulating same random walk model with drigt\n",
+    "#Simulating same random walk model with drift\n",
     "rw_drift <- arima.sim(model = list(order = c(0, 1, 0)), n = 100, mean = 1)\n",
     "\n",
     "#Plot of rw_drift\n",
